--- a/formroutedataquery.ui
+++ b/formroutedataquery.ui
@@ -25,6 +25,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="deleteButton">
+     <property name="text">
+      <string>删除</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="exportButton">
      <property name="text">
       <string>导出</string>
